5.0.0 -> 5.1a1:
    - jbj: poptIO: move --usecrypto from poptALL.
    - jbj: poptIO: fix: leave macro handling in poptALL.c for now.
    - jbj: iosm: fix: don't call headerIsEntry().
    - jbj: fix: --eval was expanding twice (dueling poptIO <-> poptALL tables.)
    - afb: avoid using the freed (realloced) value of msg for logging callback.
    - afb: configure the path to the magic file, avoids external file assert().
    - afb: silence automake warnings about using variables with special meaning.
    - proyvind: add rpm 4 API compatibility wrapper (currently adds support for at least urpmi, apt-get, ruby-rpm, rpmstats, rpmtools, & deltarpm)
    - jbj: pass low-level stateless operations from fsmStage -> iosmStage.
    - jbj: chain poptcliAllPoptTable -> rpmioAllPoptTable, start removing dupes.
    - jbj: fsm: simplify fsm.c => rpmte.h dependency.
    - jbj: perl: fix: include rpmio.h before rpmlib.h (for rpmRC returns).
    - jbj: start creating I/O State Machine(IOSM) in rpmio/iosm.c.
    - jbj: verify.c: use rpmProblemGetAltNEVR() to make rpmProblem opaque.
    - jbj: fsm: use rpmfi iterators in several loops.
    - jbj: rpmfi: add rpmfiSetHeader() so verify.c doesn't need _RPMFI_INTERNAL.
    - jbj: rpmdav: refactor davOpendir et al on top of avOpendir.
    - jbj: handle (GNU-style) ar(1) long member names.
    - jbj: permit ar(1) payloads (file names are truncated atm).
    - jbj: rpmmg: fix: avoid false failure using <pcreposix.h>.
    - jbj: macro: use popt rather than getopt(3), get rid of POSIXLY_CORRECT.
    - jbj: rpmio: splint fiddles.
    - rpm.org: Rip ancient, unused setperms + unsetgid make targets.
    - rpm.org: Add %{sources} and %{patches} macros to build.
    - rpm.org: Remove some ancient dead code.
    - jbj: fix: eliminate librpmdb->librpm from dosetenv, use setenv(3) instead.
    - jbj: fix: rpmtsCheck non-zero return doesn't print failed build deps.
    - jbj: handle mireRegexec return change internal to rpm code.