@@ -935,7 +935,7 @@ int iosmMapAttrs(IOSM_t iosm)
 	uid_t uid = fi->uid;
 	gid_t gid = fi->gid;
 
-#if defined(XXXRPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
+#if defined(RPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
 	/* Make sure OpenPKG RPM does not try to set file owner/group on files during
 	   installation of _source_ RPMs. Instead, let it use the current
 	   run-time owner/group, because most of the time the owner/group in
@@ -944,30 +944,30 @@ int iosmMapAttrs(IOSM_t iosm)
 	   course. */
 #endif
 	if (fi->fuser && unameToUid(fi->fuser[i], &uid)) {
-#if defined(XXXRPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
-	    if (headerIsEntry(fi->h, RPMTAG_SOURCERPM) != 0) {
+#if defined(RPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
+	  if (fi->isSource) {
 #endif
 	    if (iosm->goal == IOSM_PKGINSTALL)
 		rpmlog(RPMLOG_WARNING,
 		    _("user %s does not exist - using root\n"), fi->fuser[i]);
 	    uid = 0;
 	    finalMode &= ~S_ISUID;      /* turn off suid bit */
-#if defined(XXXRPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
-	    }
+#if defined(RPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
+	  }
 #endif
 	}
 
 	if (fi->fgroup && gnameToGid(fi->fgroup[i], &gid)) {
-#if defined(XXXRPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
-	    if (headerIsEntry(fi->h, RPMTAG_SOURCERPM) != 0) {
+#if defined(RPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
+	  if (fi->isSource) {
 #endif
 	    if (iosm->goal == IOSM_PKGINSTALL)
 		rpmlog(RPMLOG_WARNING,
 		    _("group %s does not exist - using root\n"), fi->fgroup[i]);
 	    gid = 0;
 	    finalMode &= ~S_ISGID;	/* turn off sgid bit */
-#if defined(XXXRPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
-	    }
+#if defined(RPM_VENDOR_OPENPKG) /* no-owner-group-on-srpm-install */
+	  }
 #endif
 	}
 
